Added explain dashboard project

--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,61 @@
                 </div>
             </div>
 
-            <!-- Project 3: Stock Prediction -->
+            <!-- Project 3: Income Analytics -->
+            <div class="project-card fade-in" data-category="business-intelligence">
+                <div class="project-header">
+                    <div class="project-meta">
+                        <div class="project-icon">
+                            <i class="fas fa-chart-line"></i>
+                        </div>
+                        <div class="project-category">Business Intelligence</div>
+                    </div>
+                    <h3 class="project-title">ML Models Analytics and Explainability Dashboard</h3>
+                    <p class="project-description">
+                        Developed a sophisticated dashboard for analyzing and comparing trained ML model's performance on respective processed datasets.
+                        Build the backend using Python and Flask and frontend using HTML, CSS and JavaScript.
+                        Deployed it on Render and made it fully functional. Used Render for hosting the backend server.
+                        Published the web app on GitHub pages.
+                        After getting the trained model and processed data from user, it generates the model performance report using SHAP, LIME, Feature Importance and Permutation Importance.
+                        Finally, it uses LLM to generate the explainability report of the model.
+                    </p>
+                    <div class="tech-stack">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">SHAP</span>
+                        <span class="tech-tag">LIME</span>
+                        <span class="tech-tag">Feature Importance</span>
+                        <span class="tech-tag">Permutation Importance</span>
+                        <span class="tech-tag">Fast API</span>
+
+
+                    </div>
+                </div>
+                <div class="project-stats">
+                    <div class="project-stat">
+                        <div class="project-stat-value">LLM</div>
+                        <div class="project-stat-label">Explainability</div>
+                    </div>
+                    <div class="project-stat">
+                        <div class="project-stat-value">100%</div>
+                        <div class="project-stat-label">Automated</div>
+                    </div>
+                    <div class="project-stat">
+                        <div class="project-stat-value">Render and GitHub Pages</div>
+                        <div class="project-stat-label">Powered</div>
+                    </div>
+                </div>
+                <div class="project-actions">
+                    <a href="https://github.com/garvitwork/dashboard" 
+                       class="magnetic-btn magnetic-btn-primary" 
+                       target="_blank" 
+                       rel="noopener noreferrer">
+                        <i class="fas fa-code"></i>
+                        View Code
+                    </a>
+                </div>
+            </div>
+
+            <!-- Project 4: Stock Prediction -->
             <div class="project-card fade-in" data-category="research">
                 <div class="project-header">
                     <div class="project-meta">
