modified index.html file for Kaggle typo

--- a/index.html
+++ b/index.html
@@ -849,8 +849,8 @@
             </div>
             
             <div class="bento-item fade-in">
-                <div class="metric-value">Top 1%</div>
-                <div class="metric-label">Kaggle Ranking</div>
+                <div class="metric-value">Researcher</div>
+                <div class="metric-label">Maths and AI/ML</div>
             </div>
         </div>
 
@@ -1192,8 +1192,8 @@
                         <div style="font-size: 0.8rem; color: var(--text-secondary);">Projects</div>
                     </div>
                     <div style="text-align: center;">
-                        <div style="font-size: 1.25rem; font-weight: 700; color: var(--text-accent);">Top 1%</div>
-                        <div style="font-size: 0.8rem; color: var(--text-secondary);">Kaggle</div>
+                        <div style="font-size: 1.25rem; font-weight: 700; color: var(--text-accent);">Researcher</div>
+                        <div style="font-size: 0.8rem; color: var(--text-secondary);">Maths and AI/ML</div>
                     </div>
                 </div>
                 
