--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@
                         <span class="tech-tag">DagsHub</span>
                     </div>
                     <a href="https://github.com/garvitwork/Bias-Web-App" class="project-link" target="_blank">
-                        View Project <i class="fas fa-arrow-right"></i>
+                        Git Hub <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
             </div>
@@ -1294,7 +1294,7 @@
                         <span class="tech-tag">DagsHub</span>
                     </div>
                     <a href="https://github.com/garvitwork/Enterprise-Income-Model-Generation-and-Predictive-Dashboard" class="project-link" target="_blank">
-                        View Project <i class="fas fa-arrow-right"></i>
+                        Git Hub <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
             </div>
@@ -1317,7 +1317,10 @@
                         <span class="tech-tag">LLM</span>
                     </div>
                     <a href="https://github.com/garvitwork/dashboard" class="project-link" target="_blank">
-                        View Project <i class="fas fa-arrow-right"></i>
+                        Git Hub <i class="fas fa-arrow-right"></i>
+                    </a>
+                    <a href="https://garvitwork.github.io/UI_explain/" class="project-link" target="_blank">
+                        Test Project <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
             </div>
