Test Project for Biasness Web App

--- a/index.html
+++ b/index.html
@@ -1273,6 +1273,9 @@
                     <a href="https://github.com/garvitwork/Bias-Web-App" class="project-link" target="_blank">
                         Git Hub <i class="fas fa-arrow-right"></i>
                     </a>
+                    <a href="https://garvitwork.github.io/BiasnessWebapplink/" class="project-link" target="_blank">
+                        Test Project <i class="fas fa-arrow-right"></i>
+                    </a>
                 </div>
             </div>
 
