index.html updated

--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@
                     <div class="tech-stack">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">Hugging Face</span>
-                        <span class="tech-tag">Streamlit</span>
+                        <span class="tech-tag">Java Script</span>
                         <span class="tech-tag">MLOps</span>
                         <span class="tech-tag">DagsHub</span>
                     </div>
