Trust Score Project added to portfolio

--- a/index.html
+++ b/index.html
@@ -1331,6 +1331,35 @@
             <!-- Project 4 -->
             <div class="project-card">
                 <div class="project-header">
+                    <div class="project-category">ML Explainability</div>
+                    <h3 class="project-title">Machine Learning Models' Trust Scoring Platform</h3>
+                    <p class="project-description">
+                        Comprehensive platform for scoring the ML models for how trustworthy they are based on 5 features - 
+                        Confidence Consistency, Data Familiarity, Agreement Score, Explanation Stability and Historical Error Rate.
+                    </p>
+                </div>
+                <div class="project-body">
+                    <div class="tech-stack">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Trust Scoring Weighted Formula</span>
+                        <span class="tech-tag">JavaScript</span>
+                        <span class="tech-tag">FastAPI</span>
+                        <span class="tech-tag">MLOps</span>
+                    </div>
+                    <a href="https://github.com/garvitwork/Trustworthiness-Scoring-Web-App" class="project-link" target="_blank">
+                        Git Hub <i class="fas fa-arrow-right"></i>
+                    </a>
+                    <a href="https://garvitwork.github.io/TrustWebLink/" class="project-link" target="_blank">
+                        Test Project <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+
+
+
+            <!-- Project 5 -->
+            <div class="project-card">
+                <div class="project-header">
                     <div class="project-category">Research</div>
                     <h3 class="project-title">AI-Powered Stock Prediction System</h3>
                     <p class="project-description">
