index.html project 4 commented

--- a/index.html
+++ b/index.html
@@ -1346,12 +1346,12 @@
                         <span class="tech-tag">FastAPI</span>
                         <span class="tech-tag">MLOps</span>
                     </div>
-                    <!-- <a href="https://github.com/garvitwork/Trustworthiness-Scoring-Web-App" class="project-link" target="_blank">
+                    <a href="https://github.com/garvitwork/Trustworthiness-Scoring-Web-App" class="project-link" target="_blank">
                         Git Hub <i class="fas fa-arrow-right"></i>
                     </a>
                     <a href="https://garvitwork.github.io/TrustWebLink/" class="project-link" target="_blank">
                         Test Project <i class="fas fa-arrow-right"></i>
-                    </a> -->
+                    </a>
                 </div>
             </div>
 
