--- a/index.html
+++ b/index.html
@@ -1910,7 +1910,7 @@
                     <i class="fas fa-envelope"></i>
                 </div>
                 <div class="contact-label">Email</div>
-                <div class="contact-value"><a href="garvitwork25@gmail.com" class="__cf_email__" data-cfemail="adcaccdfdbc4d9dac2dfc69f98edcac0ccc4c183cec2c0">[email&#160;protected]</a></div>
+                <div class="contact-value"><a href="garvitwork25@gmail.com" class="__cf_email__" data-cfemail="adcaccdfdbc4d9dac2dfc69f98edcac0ccc4c183cec2c0">garvitwork25@gmail.com</a></div>
             </div>
 
             <div class="contact-card">
