--- a/index.html
+++ b/index.html
@@ -166,28 +166,48 @@
             display: none;
             flex-direction: column;
             justify-content: center;
-            gap: 5px;
-            background: none;
+            align-items: center;
+            gap: 0;
+            background: var(--black);
             border: none;
             cursor: pointer;
-            padding: 6px;
+            padding: 0;
+            width: 44px;
+            height: 44px;
+            position: relative;
             z-index: 1001;
+            clip-path: polygon(0 0, 92% 0, 100% 100%, 8% 100%);
+            transition: background 0.3s ease;
+        }
+
+        .nav-hamburger:hover {
+            background: var(--yellow);
+        }
+
+        .nav-hamburger:hover span {
+            background: var(--black);
         }
 
         .nav-hamburger span {
             display: block;
-            width: 24px;
-            height: 2px;
-            background: var(--black);
-            border-radius: 2px;
-            transition: all 0.3s ease;
+            width: 18px;
+            height: 1.5px;
+            background: var(--white);
+            transition: all 0.35s cubic-bezier(0.23, 1, 0.32, 1);
             transform-origin: center;
+            position: absolute;
         }
 
+        .nav-hamburger span:nth-child(1) { transform: translateY(-6px); }
+        .nav-hamburger span:nth-child(2) { transform: translateY(0px); width: 12px; }
+        .nav-hamburger span:nth-child(3) { transform: translateY(6px); }
+
         /* Animate to X when open */
-        .nav-hamburger.open span:nth-child(1) { transform: translateY(7px) rotate(45deg); }
+        .nav-hamburger.open { background: var(--yellow); }
+        .nav-hamburger.open span { background: var(--black); }
+        .nav-hamburger.open span:nth-child(1) { transform: translateY(0) rotate(45deg); width: 18px; }
         .nav-hamburger.open span:nth-child(2) { opacity: 0; transform: scaleX(0); }
-        .nav-hamburger.open span:nth-child(3) { transform: translateY(-7px) rotate(-45deg); }
+        .nav-hamburger.open span:nth-child(3) { transform: translateY(0) rotate(-45deg); }
 
         /* Hero Section */
         .hero {
@@ -1910,10 +1930,82 @@
             color: var(--black);
         }
 
-        /* Responsive: hide sidebar on small screens */
+        /* ── Mobile Projects Nav Bar (replaces sidebar on small screens) ── */
+        .mobile-projects-nav {
+            display: none; /* shown via media query */
+            position: sticky;
+            top: 61px; /* sits just below the fixed navbar */
+            z-index: 100;
+            background: var(--white);
+            border-bottom: 2px solid var(--black);
+            overflow-x: auto;
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+        }
+
+        .mobile-projects-nav::-webkit-scrollbar { display: none; }
+
+        .mobile-projects-nav-inner {
+            display: flex;
+            align-items: stretch;
+            min-width: max-content;
+            padding: 0;
+        }
+
+        .mobile-proj-link {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 2px;
+            padding: 10px 16px;
+            text-decoration: none;
+            color: rgba(0,0,0,0.45);
+            font-size: 11px;
+            font-weight: 600;
+            letter-spacing: 0.3px;
+            border-bottom: 3px solid transparent;
+            margin-bottom: -2px;
+            white-space: nowrap;
+            transition: all 0.2s ease;
+            position: relative;
+        }
+
+        .mobile-proj-link:hover {
+            color: var(--black);
+            background: var(--light-gray);
+        }
+
+        .mobile-proj-link.active {
+            color: var(--black);
+            border-bottom-color: var(--yellow);
+            background: rgba(255,215,0,0.07);
+        }
+
+        .mobile-proj-num {
+            font-size: 9px;
+            font-weight: 800;
+            letter-spacing: 1px;
+            color: rgba(0,0,0,0.25);
+            transition: color 0.2s;
+        }
+
+        .mobile-proj-link.active .mobile-proj-num,
+        .mobile-proj-link:hover .mobile-proj-num {
+            color: var(--black);
+        }
+
+        .mobile-proj-lock {
+            font-size: 7px;
+            margin-left: 3px;
+            opacity: 0.5;
+        }
+
+        /* Responsive: hide sidebar on small screens, show mobile nav */
         @media (max-width: 1100px) {
             .projects-sidebar { display: none; }
             .projects-layout  { display: block; }
+            .mobile-projects-nav { display: block; }
         }
 
         /* ── MOBILE (≤768px) ── */
@@ -1925,32 +2017,56 @@
             .nav-links {
                 display: none;
                 position: fixed;
-                top: 0; left: 0; right: 0;
-                background: rgba(255,255,255,0.98);
-                backdrop-filter: blur(12px);
+                top: 0; left: 0; right: 0; bottom: 0;
+                background: var(--white);
                 flex-direction: column;
-                align-items: center;
+                align-items: flex-start;
                 justify-content: center;
                 gap: 0;
-                padding: 80px 0 40px;
+                padding: 100px 40px 60px;
                 z-index: 999;
                 list-style: none;
                 min-height: 100dvh;
+                border-left: 4px solid var(--yellow);
             }
 
             .nav-links.open { display: flex; }
 
-            .nav-links li { width: 100%; text-align: center; }
-
-            .nav-link {
-                display: block;
-                font-size: 22px;
-                font-weight: 700;
-                padding: 18px 40px;
-                letter-spacing: -0.5px;
+            .nav-links li {
+                width: 100%;
+                border-bottom: 1px solid var(--gray);
             }
 
-            .nav-link::after { bottom: -2px; }
+            .nav-links li:last-child { border-bottom: none; }
+
+            .nav-link {
+                display: flex;
+                align-items: center;
+                gap: 16px;
+                font-size: 26px;
+                font-weight: 800;
+                padding: 20px 0;
+                letter-spacing: -1px;
+                color: var(--black);
+                text-decoration: none;
+                width: 100%;
+            }
+
+            /* Number prefix for each mobile nav item */
+            .nav-link::before {
+                content: attr(data-num);
+                font-size: 11px;
+                font-weight: 700;
+                letter-spacing: 2px;
+                color: rgba(0,0,0,0.25);
+                min-width: 28px;
+            }
+
+            /* Override the underline ::after on mobile */
+            .nav-link::after { display: none; }
+
+            .nav-link.active { color: var(--black); }
+            .nav-link.active::before { color: var(--yellow); }
 
             .nav-container { padding: 0 20px; }
 
@@ -2139,11 +2255,11 @@
                 <span></span><span></span><span></span>
             </button>
             <ul class="nav-links" id="navLinks">
-                <li><a href="#home" class="nav-link active">Home</a></li>
-                <li><a href="#projects-page" class="nav-link">Projects</a></li>
-                <li><a href="#expertise-page" class="nav-link">Expertise</a></li>
-                <li><a href="#about-page" class="nav-link">About</a></li>
-                <li><a href="#contact-page" class="nav-link">Contact</a></li>
+                <li><a href="#home" class="nav-link active" data-num="01">Home</a></li>
+                <li><a href="#projects-page" class="nav-link" data-num="02">Projects</a></li>
+                <li><a href="#expertise-page" class="nav-link" data-num="03">Expertise</a></li>
+                <li><a href="#about-page" class="nav-link" data-num="04">About</a></li>
+                <li><a href="#contact-page" class="nav-link" data-num="05">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -2201,6 +2317,36 @@
         <div class="section-header">
             <h2 class="section-title">Featured Projects</h2>
             <p class="section-subtitle">Innovative AI solutions driving real-world impact</p>
+        </div>
+
+        <!-- Mobile horizontal project nav (visible on ≤1100px) -->
+        <div class="mobile-projects-nav" id="mobileProjectsNav">
+            <div class="mobile-projects-nav-inner">
+                <a href="#proj-1" class="mobile-proj-link active" data-proj="proj-1">
+                    <span class="mobile-proj-num">01</span>
+                    <span>AURUM</span>
+                </a>
+                <a href="#proj-2" class="mobile-proj-link" data-proj="proj-2">
+                    <span class="mobile-proj-num">02</span>
+                    <span>Bias Detection</span>
+                </a>
+                <a href="#proj-3" class="mobile-proj-link" data-proj="proj-3">
+                    <span class="mobile-proj-num">03</span>
+                    <span>Income Analytics</span>
+                </a>
+                <a href="#proj-4" class="mobile-proj-link" data-proj="proj-4">
+                    <span class="mobile-proj-num">04</span>
+                    <span>Explainability</span>
+                </a>
+                <a href="#proj-5" class="mobile-proj-link" data-proj="proj-5">
+                    <span class="mobile-proj-num">05</span>
+                    <span>Trust Scoring</span>
+                </a>
+                <a href="#proj-6" class="mobile-proj-link mobile-proj-link-research" data-proj="proj-6">
+                    <span class="mobile-proj-num">06</span>
+                    <span>Stock Prediction <i class="fas fa-lock mobile-proj-lock"></i></span>
+                </a>
+            </div>
         </div>
 
         <!-- Projects layout: sidebar + cards -->
@@ -2926,7 +3072,7 @@
                     <i class="fas fa-envelope"></i>
                 </div>
                 <div class="contact-label">Email</div>
-                <div class="contact-value"><a href="garvitwork25@gmail.com" class="__cf_email__" data-cfemail="adcaccdfdbc4d9dac2dfc69f98edcac0ccc4c183cec2c0"><span class="__cf_email__" data-cfemail="2a4d4b585c435e5d455841181f6a4d474b434604494547">garvitwork25@gmail.com</span></a></div>
+                <div class="contact-value"><a href="garvitwork25@gmail.com" class="__cf_email__" data-cfemail="adcaccdfdbc4d9dac2dfc69f98edcac0ccc4c183cec2c0"><span class="__cf_email__" data-cfemail="2a4d4b585c435e5d455841181f6a4d474b434604494547">[email&#160;protected]</span></a></div>
             </div>
 
             <div class="contact-card">
@@ -3100,16 +3246,17 @@
             observer.observe(card);
         });
 
-        // ── Projects sidebar scroll-spy ──
+        // ── Projects sidebar + mobile nav scroll-spy ──
         function initProjectsSidebar() {
             const sidebarLinks = document.querySelectorAll('.sidebar-link');
+            const mobileLinks  = document.querySelectorAll('.mobile-proj-link');
             const projectCards = ['proj-1','proj-2','proj-3','proj-4','proj-5','proj-6']
                 .map(id => document.getElementById(id))
                 .filter(Boolean);
 
             if (!projectCards.length) return;
 
-            // Smooth scroll to project card on sidebar click
+            // Smooth scroll — sidebar
             sidebarLinks.forEach(link => {
                 link.addEventListener('click', function(e) {
                     e.preventDefault();
@@ -3121,30 +3268,48 @@
                 });
             });
 
-            // Scroll-spy: highlight active project + update progress bar
+            // Smooth scroll — mobile tab bar (offset extra for sticky bar height)
+            mobileLinks.forEach(link => {
+                link.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    const target = document.querySelector(this.getAttribute('href'));
+                    if (target) {
+                        const mobileNav = document.getElementById('mobileProjectsNav');
+                        const mobileNavH = mobileNav ? mobileNav.offsetHeight : 0;
+                        const offset = target.getBoundingClientRect().top + window.scrollY - 120 - mobileNavH;
+                        window.scrollTo({ top: offset, behavior: 'smooth' });
+                    }
+                });
+            });
+
+            // Scroll-spy
             function onScroll() {
-                const scrollY = window.scrollY + 180;
+                const scrollY = window.scrollY + 200;
                 const bar = document.getElementById('projectsProgress');
 
                 // Progress bar
-                const firstTop = projectCards[0].getBoundingClientRect().top + window.scrollY;
+                const firstTop   = projectCards[0].getBoundingClientRect().top + window.scrollY;
                 const lastBottom = projectCards[projectCards.length - 1].getBoundingClientRect().bottom + window.scrollY;
-                const progress = Math.min(100, Math.max(0,
-                    ((scrollY - firstTop) / (lastBottom - firstTop)) * 100
-                ));
+                const progress   = Math.min(100, Math.max(0, ((scrollY - firstTop) / (lastBottom - firstTop)) * 100));
                 if (bar) bar.style.width = progress + '%';
 
-                // Active link
+                // Active card
                 let activeId = projectCards[0].id;
                 projectCards.forEach(card => {
-                    const top = card.getBoundingClientRect().top + window.scrollY;
-                    if (scrollY >= top) activeId = card.id;
+                    if (scrollY >= card.getBoundingClientRect().top + window.scrollY) activeId = card.id;
                 });
 
-                sidebarLinks.forEach(link => {
-                    const proj = link.getAttribute('data-proj');
-                    link.classList.toggle('active', proj === activeId);
-                });
+                // Update sidebar
+                sidebarLinks.forEach(link => link.classList.toggle('active', link.getAttribute('data-proj') === activeId));
+
+                // Update mobile tabs + auto-scroll the tab bar
+                mobileLinks.forEach(link => link.classList.toggle('active', link.getAttribute('data-proj') === activeId));
+                const activeMobile = document.querySelector(`.mobile-proj-link[data-proj="${activeId}"]`);
+                const mobileNav    = document.getElementById('mobileProjectsNav');
+                if (activeMobile && mobileNav) {
+                    const scrollTo = activeMobile.offsetLeft - (mobileNav.offsetWidth / 2) + (activeMobile.offsetWidth / 2);
+                    mobileNav.scrollTo({ left: scrollTo, behavior: 'smooth' });
+                }
             }
 
             window.addEventListener('scroll', onScroll, { passive: true });
