--- a/index.html
+++ b/index.html
@@ -3072,7 +3072,7 @@
                     <i class="fas fa-envelope"></i>
                 </div>
                 <div class="contact-label">Email</div>
-                <div class="contact-value"><a href="garvitwork25@gmail.com" class="__cf_email__" data-cfemail="adcaccdfdbc4d9dac2dfc69f98edcac0ccc4c183cec2c0"><span class="__cf_email__" data-cfemail="2a4d4b585c435e5d455841181f6a4d474b434604494547">[email&#160;protected]</span></a></div>
+                <div class="contact-value"><a href="garvitwork25@gmail.com" class="__cf_email__" data-cfemail="adcaccdfdbc4d9dac2dfc69f98edcac0ccc4c183cec2c0"><span class="__cf_email__" data-cfemail="2a4d4b585c435e5d455841181f6a4d474b434604494547">garvitwork25@gmail.com</span></a></div>
             </div>
 
             <div class="contact-card">
@@ -3100,7 +3100,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 Garvit Gupta. All rights reserved.</p>
+        <p>&copy; 2026 Garvit Gupta. All rights reserved.</p>
     </footer>
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
